tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__false1/errors.netconvert
Error: Attribute 'numLanes' in definition of edge '1' Invalid Number Format .
Quitting (on error).
